# NeuroVisKit

./: .gitignore  .gitmodules  README.md  continuous.py  environment.yml  example_config.jsonc  gabor.py  gabor_basis.py  gabor_params.npy  gabor_params_2d.npy  mass_eval.py  minimal.py  postprocess.py  postprocessC.py  postprocess_hist.py  preprocess.py  preprocessC.py  preprocess_shifter.py  pyproject.toml  regularization_scaling_test.py  schedule.py  setup.cfg  setup.py  test_shifter_load.py  test_train_shifter.py  tests.py  train.py  trainC.py  train_autobatch.py  train_convex.py  train_gabor_readout.py  train_gallant.py  train_glm.py  train_hyper.py  train_lightning.py  train_lightning_test.py  train_resor.py  train_test.py  unet.py  utils.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
NeuroVisKit/: preprocessC.py  trainC.py
NeuroVisKit/_utils/: utils.py
NeuroVisKit/utils/: optimizer.py
_future/: cluster.py  lightning.py  loss.py  models.py  optimizer.py  postprocess.py  preprocess.py  reservoir.py  train.py  transients.py  utils.py
_future/datasets/: __init__.py  (+1 more)
_utils/: __init__.py  dump.py  io.py  lightning.py  mess.py  postprocess.py  regularization.py  train.py  utils.py
pixel/: fixation.py
tests/: test_regularization.py
tutorials/: regularization.ipynb
utils/: __init__.py  cluster.py  datasets.py  evaluate.py  get_models.py  hires.py  hyper.py  lightning.py  loss.py  mei.py  models.py  plotting.py  postprocess.py  preprocess.py  process.py  regularization.py  reservoir.py  rf.py  schedule.py  train.py  trainer.py  utils.py
(+11 files in other folders)
