[project]
name = "NeuroVisKit"
version = "0.0.1"
authors = [{ name="Dekel Galor", email="galor@berkeley.edu" },{ name="Jacob Yates", email="yates@berkeley.edu" }]
description = "NeuroVisKit"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3","License :: OSI Approved :: MIT License","Operating System :: OS Independent"]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"